--- a/responsive-web-design-projects/technical-documentation-page/style.css
+++ b/responsive-web-design-projects/technical-documentation-page/style.css
@@ -1,6 +1,7 @@
 html
 body {
     background-color: #ffffff;
+    height: 100%;
 }
 
 header {
@@ -8,11 +9,20 @@ header {
     text-align: center;
     font-size: 30px;
     padding: 1rem;
+    border-right: solid #4d4e53 2px;
 }
 
-#navbar {
-    border-right: solid #4d4e53 3px;
-}
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 25%;
+    height: 100%; 
+    position: fixed; 
+    overflow: auto; 
+    border-right: solid #4d4e53 2px;
+    border-top: solid #4d4e53 1px;
+  }
 
 .nav-link {
     text-decoration: none;
@@ -22,7 +32,9 @@ header {
 
 }
 
-
+#nav-what {
+    border-top: #4d4e53 solid 1px;
+}
 
 #reference {
     border-bottom: none;
