--- a/responsive-web-design-projects/technical-documentation-page/style.css
+++ b/responsive-web-design-projects/technical-documentation-page/style.css
@@ -1,9 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+
+:root {
+    --bs-blurb-font-family: 'Open Sans', sans-serif; 
+}
+
 html
 body {
     background-color: #ffffff;
     height: 100%;
 }
 
+
+/* navbar section */
 header {
     color: black;
     text-align: center;
@@ -12,11 +20,17 @@ header {
     border-right: solid #4d4e53 2px;
 }
 
-ul {
+#navbar {
+    width: 300px;
+}
+
+/* navbar to stick to side whilst scrolling
+border-right also fits whole page */
+#navbar-border {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    width: 25%;
+    width: 300px;
     height: 100%; 
     position: fixed; 
     overflow: auto; 
@@ -38,4 +52,16 @@ ul {
 
 #reference {
     border-bottom: none;
+}
+
+/* main info section */
+main {
+    margin-left: 360px;
+    display: block;
+    font-family: var(--bs-blurb-font-family);
+    font-weight: 500;
+}
+
+section {
+    display: block;
 }
