--- a/responsive-web-design-projects/technical-documentation-page/style.css
+++ b/responsive-web-design-projects/technical-documentation-page/style.css
@@ -16,17 +16,21 @@ header {
     color: black;
     text-align: center;
     font-size: 30px;
-    padding: 1rem;
-    border-right: solid #4d4e53 2px;
+    margin-top: 50px;
+    padding:1rem;
+    display: block;
+    border-bottom: solid #4d4e53 1px;
+    
 }
 
 #navbar {
     width: 300px;
+    position: fixed;
 }
 
 /* navbar to stick to side whilst scrolling
 border-right also fits whole page */
-#navbar-border {
+#navbar-border  {
     list-style-type: none;
     margin: 0;
     padding: 0;
