--- a/responsive-web-design-projects/technical-documentation-page/style.css
+++ b/responsive-web-design-projects/technical-documentation-page/style.css
@@ -87,3 +87,15 @@ article > ul {
 #what-know-list {
     line-height: 2.5;
 }
+
+code {
+    display: block;
+    text-align: left;
+    word-break: normal;
+    word-wrap: normal;
+    line-height: 2;
+    background-color: #f7f7f7;
+    padding: 15px;
+    margin: 10px;
+    border-radius: 5px;
+}
