--- a/responsive-web-design-projects/technical-documentation-page/style.css
+++ b/responsive-web-design-projects/technical-documentation-page/style.css
@@ -4,11 +4,12 @@
     --bs-blurb-font-family: 'Open Sans', sans-serif; 
 }
 
-html
-body {
+html {
     background-color: #ffffff;
     height: 100%;
 }
+
+/* CSS toggle for light/dark mode */
 
 
 /* navbar section */
