--- a/responsive-web-design-projects/technical-documentation-page/style.css
+++ b/responsive-web-design-projects/technical-documentation-page/style.css
@@ -35,7 +35,7 @@ border-right also fits whole page */
     list-style-type: none;
     margin: 0;
     padding: 0;
-    width: 300px;
+    /* width: 300px; */
     height: 100%; 
     position: fixed; 
     overflow: auto; 
