--- a/responsive-web-design-projects/practice-portfolio/style.css
+++ b/responsive-web-design-projects/practice-portfolio/style.css
@@ -14,20 +14,30 @@ li:hover {
     background: #45567d;
     padding-top: 100%;
     margin-top: -100%;
-    padding-bottom: 2%;
-    margin-bottom: -2%;
+    padding-bottom: 2.3%;
+    margin-bottom: -2.3%;
     
 }
 
 #introduction {
-    background-color: wheat;
-    padding: 15rem;
+    background-color: #000;
+    background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
+    color: white;
+    padding: 27rem;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-img {
-    margin-left: 700px;
-    margin-bottom: 100px ;
+p {
+    color: #be1344;
+    font-size: 25px;
 }
 
+#projects {
+    background-color: #45567d;
+    color: white;
+}
 
 
