--- a/responsive-web-design-projects/practice-portfolio/style.css
+++ b/responsive-web-design-projects/practice-portfolio/style.css
@@ -47,13 +47,22 @@ img {
     padding-right: 1rem;
     padding-top: 1rem;
     padding-bottom: 1rem;
+
     
 }
 
+.link {
+    text-decoration: none;
+    font-family: sans-serif;
+}
+
 #project-heading {
-    background-color: #181719;
+    background-color: #303841;
     margin-top: -16px;
-    width: 370px;
-    margin-left: 23.5px;
+    margin-right: 24px;
+    margin-left: 24px;
+    height: 50px;
+    color: white;
+    padding: 1rem 1rem
 }
 
