--- a/responsive-web-design-projects/practice-portfolio/style.css
+++ b/responsive-web-design-projects/practice-portfolio/style.css
@@ -3,6 +3,8 @@
 :root {
     --bs-font-title: 'Raleway', sans-serif;
 }
+
+
 /* NAVBAR */
 nav {
     background-color: #be1344;
@@ -20,8 +22,8 @@ li:hover {
     background: #45567d;
     padding-top: 100%;
     margin-top: -100%;
-    padding-bottom: 2.3%;
-    margin-bottom: -2.3%;
+    padding-bottom: 2.0%;
+    margin-bottom: -2.0%;
     
 }
 
@@ -65,20 +67,6 @@ li:hover {
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* CONTACT */
 #contact {
     background-color: #303841;
@@ -86,6 +74,10 @@ li:hover {
     padding: 7rem;
     border-bottom: 5px solid;
     border-color: #be1344;
+}
+
+.fa {
+    filter:brightness(0), invert(1)
 }
 
 /* FOOTER */
