--- a/responsive-web-design-projects/portfolio/style.css
+++ b/responsive-web-design-projects/portfolio/style.css
@@ -13,7 +13,7 @@ html {
 
 /* NAVBAR */
 nav {
-    position: fixed !important;
+    position: absolute !important;
     top: 0;
     right: 0;
     left: 0;
