--- a/responsive-web-design-projects/portfolio/style.css
+++ b/responsive-web-design-projects/portfolio/style.css
@@ -93,9 +93,9 @@ html, body {
   width: 90%;
   max-width: 1080px;
   margin: 0 auto;
-  background: #2B343A;
+  background: #242c31;
   padding: 0 10%;
-  border-radius: 2px;
+  border-radius: 20px;
 }
 .cd-container::after {
   content: '';
@@ -341,6 +341,17 @@ Main components
 .card {
     --bs-card-border-width:0px !important;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    
+}
+
+.card {
+    border-radius: 20px !important;
+}
+
+.card-img-top {
+    border-top-right-radius: 20px !important;
+    border-top-left-radius: 20px !important;
+    
 }
 
 
