--- a/responsive-web-design-projects/portfolio/style.css
+++ b/responsive-web-design-projects/portfolio/style.css
@@ -53,7 +53,7 @@ li:hover {
     background-size: cover;
     background-attachment: fixed;    
     color: white;
-    padding: 27rem;
+    height: 100vh;
     align-items: center;
     justify-content: center;
     display: flex;
@@ -378,12 +378,14 @@ Main components
 .fa {
     color: white;
     transition: color 0.3s ease-in-out;
+    transition: 0.3s;
 }
 
 .fa:hover { 
     color: var(--bs-base-red);
     transition: color 0.3s ease-in-out;
-
+    transition: 0.3s;
+    transform: translateY(-3px);
 }
 
 /* FOOTER */
